fixed contrast issue in mobile view

--- a/app/assets/stylesheets/components/button/_button.scss
+++ b/app/assets/stylesheets/components/button/_button.scss
@@ -7,6 +7,10 @@ $govuk-button-text-colour: govuk-colour("black");
 
 $button-shadow-size: $govuk-border-width-form-element;
 
+.govuk-header__menu-button {
+  color: $govuk-button-text-colour;
+}
+
 .govuk-button {
   color: $govuk-button-text-colour;
   background-color: $govuk-button-colour;
